Contrast fixes and general improvements

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -11,7 +11,7 @@
     
     --nav-background-color: #00A896;
     --nav-link-color: #020025b3;
-    --nav-hover-link-color: #F0F3BD;
+    --nav-hover-link-color: #3000E7;
     --nav-hover-background-color: #02C39A;
 }
 
@@ -30,31 +30,35 @@ p {
 
 body {
     max-width: 1024px;
+    margin: auto;
 }
+
+/* BASE HEADER AND FOOTER SELECTORS */
 
 header {
     display: grid;
+    grid-template-columns: 1fr 3fr;
     justify-items: center;
     align-items: center;
-    grid-template-columns: 1fr 3fr;
     padding: 0 1rem;
     background-color: var(--nav-background-color);
+    border-radius: 0 0 1rem 1rem;
  }
 
 header img {
-    width: 150px;
-    height: auto;
+    height: 150px;
+    width: auto;
 }
 
 header nav {
     display: flex;
-    justify-content: space-evenly;
     width: 100%;
+    justify-content: space-evenly;
 }
 
 header a {
     text-decoration: none;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     font-weight: bold;
     color: var(--nav-link-color);
 }
@@ -62,6 +66,33 @@ header a {
 header a:hover {
     color: var(--nav-hover-link-color);
 }
+
+footer {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    padding: 0 2rem;
+    margin-top: 1rem;
+    background-color: var(--nav-background-color);
+    color: var(--primary-color);
+    border-radius: 1rem 1rem 0 0;
+}
+
+footer a {
+    color: var(--nav-link-color);
+}
+
+footer a:hover {
+    color: var(--nav-hover-link-color);
+}
+
+footer a img {
+    width: 50px;
+    height: auto;
+    padding: .5rem;
+}
+
+/* ABOUT US SELECTORS */
 
 .hero {
     position: relative;
@@ -92,6 +123,7 @@ header a:hover {
     width: 40%;
     background-color: var(--secondary-color);
     opacity: .9;
+    border-radius: 0 1rem 1rem 0;
 }
 
 .hero article h2 {
@@ -101,8 +133,8 @@ header a:hover {
 .hero article img {
     float: right;
     width: 100px;
+    border-radius: 1rem 0 0 1rem;
 }
-
 
 section.history {
     display: grid;
@@ -125,6 +157,7 @@ section.history img  {
     width: 200px;
     height: auto;
     grid-column: 2/3;
+    border-radius: 1rem;
 }
 
 section.adventure {
@@ -132,6 +165,7 @@ section.adventure {
     justify-items: center;
     align-items: center;
     grid-template-columns: repeat(5, 1fr);
+    text-align: center;
 }
 
 section.adventure h2 {
@@ -146,23 +180,10 @@ section.adventure img {
     display: block;
     width: 100%;
     height: auto;
+    border-radius: .5rem;
 }
 
-footer {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    padding: 0 2rem;
-    margin-top: 3rem;
-    background-color: var(--nav-background-color);
-    color: var(--accent2-color);
-}
-
-footer a img {
-    width: 50px;
-    height: auto;
-    padding: .5rem;
-}
+/* CONTACT PAGE SELECTORS */
 
 section.contact {
     display: grid;
@@ -173,6 +194,12 @@ section.contact {
 section.contact h2 {
     grid-column: 1/3;
     text-align: center;
+}
+
+.contact aside {
+    border: .3rem solid var(--primary-color);
+    border-radius: .5rem;
+    margin: 0 1rem;
 }
 
 section.contact iframe {
@@ -192,6 +219,7 @@ section.team h2 {
 section.team img {
     display: block;
     margin: 1rem auto;
+    border-radius: .5rem;
 }
 
 form {
@@ -253,7 +281,8 @@ form input[type="checkbox"] {
 form button {
     border: 0;
     background-color: var(--accent1-color);
-    color: white;
+    color: var(--primary-color);
+    font-weight: bold;
     border-radius: 1rem;
     height: 3rem;
     font-size: larger;
@@ -324,6 +353,10 @@ form button:hover {
     padding: .75rem;
 }
 
+.trips-action h2 {
+    margin: 3rem auto;
+}
+
 .button-link {
     font-size: 1.5rem;
     color: var(--primary-color);
@@ -344,6 +377,7 @@ form button:hover {
     display: grid;
     justify-items: center;
     align-items: center;
+    grid-gap: 1rem 0;
 }
 
 .home .hero {
